# ansible-lint-rules

./: .ansible-lint  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/scripts/: increment-tag.sh
.github/workflows/: master.yml  pytest.yml  release_to_pypi.yml
rules/: task_module_last.py  when_follows_name.py
tests/: task_module_last_tests.py  when_follows_name_tests.py
tests/playbooks/task-module-last/: fail.yml  success.yml
tests/playbooks/when-follows-name/: fail.yml  success.yml
