[metadata]
name = ansiblelint_custom_rules_zjleblanc
description = Ansible-lint custom rules for sharing and integrating with your enterprise
project_urls =
    Bug Tracker = https://github.com/zjleblanc/ansible-lint-rules/issues
    Source = https://github.com/zjleblanc/ansible-lint-rules
long_description =
    Useful rules to extend ansible-lint built-in functionality
    based on a style guide developed by Red Hat energy pod.

author = Zach LeBlanc
author_email = zleblanc@redhat.com
maintainer = Zach LeBlanc
maintainer_email = zleblanc@redhat.com
license = MIT
url = https://github.com/zjleblanc/ansible-lint-rules
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages =
    ansiblelint.rules.custom.zjleblanc
package_dir =
    ansiblelint.rules.custom.zjleblanc = rules

install_requires =
    setuptools
    ansible-lint

[options.packages.find]
where=.
exclude =
    tests
    tests.*

[options.extras_require]
devel =
    pytest

[tool:pytest]
testpaths =
    tests

python_files =
    *tests.py